Notification edit save fix, UI tweaks to keep cards from getting too large

--- a/theme/custom.scss
+++ b/theme/custom.scss
@@ -521,3 +521,9 @@ a {
 .display-flex {
   display: flex;
 }
+
+.notice-types-overflow {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
